# jai-build

./: .gitignore  README.md  build.sh  pyproject.toml  release.json  setup.py
.github/workflows/: release-portable-linux.yml
src/jai_sandbox/: __init__.py
tools/: bump.sh  local-build.sh  package.sh  release.sh  version.py
