[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jai-sandbox"
dynamic = ["version"]
description = "Linux sandbox for untrusted code execution"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Utilities",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "jai_sandbox.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
